syntax = "proto3";
package state;
option go_package = "pb";

import "wrappers.proto";

message Role {
    string id = 1;
    string guild_id = 2;
    string name = 3;
    bool managed = 4;
    bool mentionable = 5;
    bool hoist = 6;
    int32 color = 7;
    int32 position = 8;
    int32 permissions = 9;
}

message RoleUpdate {
    StringValue name = 3;
    BoolValue managed = 4;
    BoolValue mentionable = 5;
    BoolValue hoist = 6;
    Int32Value color = 7;
    Int32Value position = 8;
    Int32Value permissions = 9;
}

message GetRoleRequest {
    string id = 1;
    string guild_id = 2;
}
message GetRoleResponse {
    Role role = 1;
}
message SetRoleRequest {
    Role role = 1;
}
message SetRoleResponse {}
message UpdateRoleRequest {
    string id = 1;
    string guild_id = 2;
    RoleUpdate role = 3;
}
message UpdateRoleResponse {
    Role role = 1;
}
message DeleteRoleRequest {
    string id = 1;
    string guild_id = 2;
}
message DeleteRoleResponse {}

message SetRoleChunkRequest {
    string guild_id = 1;
    repeated Role roles = 2;
}
message SetRoleChunkResponse {
    int32 ops = 1;
}
